# substrate-api-client-test-node

./: .gitignore  Jenkinsfile  README.md
.github/workflows/: build-push-template.yml
ci/: install_rust.sh  install_wasm.sh
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
