[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'node-template'

[dependencies.node-template-runtime]
path = '../runtime'
version = '2.0.0-rc5'

[dependencies.sc-basic-authorship]
version = '0.8.0-rc5'

[dependencies.sc-cli]
features = ['wasmtime']
version = '0.8.0-rc5'

[dependencies.sc-client-api]
version = '2.0.0-rc5'

[dependencies.sc-consensus]
version = '0.8.0-rc5'

[dependencies.sc-consensus-aura]
version = '0.8.0-rc5'

[dependencies.sc-executor]
features = ['wasmtime']
version = '0.8.0-rc5'

[dependencies.sc-finality-grandpa]
version = '0.8.0-rc5'

[dependencies.sc-service]
features = ['wasmtime']
version = '0.8.0-rc5'

[dependencies.sc-transaction-pool]
version = '2.0.0-rc5'

[dependencies.sp-consensus]
version = '0.8.0-rc5'

[dependencies.sp-consensus-aura]
version = '0.8.0-rc5'

[dependencies.sp-core]
version = '2.0.0-rc5'

[dependencies.sp-finality-grandpa]
version = '2.0.0-rc5'

[dependencies.sp-inherents]
version = '2.0.0-rc5'

[dependencies.sp-runtime]
version = '2.0.0-rc5'

[dependencies.sp-transaction-pool]
version = '2.0.0-rc5'

[dependencies.structopt]
version = '0.3.8'

[build-dependencies.substrate-build-script-utils]
version = '2.0.0-rc5'
