[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.1.0-pre.1'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
node-template-runtime = { path = '../runtime'}

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-cli = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-executor = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-service = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
