[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.1.0-pre.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '1.0.5' }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }

# local dependencies
pallet-template = { path = '../pallets/template', default-features = false}

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2cd2096" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
