[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.1.0-pre.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.101' }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "a208da16" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "a208da16" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "a208da16" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "a208da16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "a208da16" }

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
]
